--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="card-white">
       <h1>Hello, I'm Anna 😎 </h1>
       <img src="images/IMG_0033-screen (1).jpg" class="img-circle" alt="profile" height="300px">
-      <p>I love Ruby on Rails, web-development and traveling around the World 🌍. At the moment I participate at the fullstack
+      <p>I love Ruby on Rails, web-development and traveling around the World 🌍. 
+        At the moment I participate at the fullstack
         web-development bootcamp of Le Wagon.</p>
       <a href="https://www.lewagon.com" class="btn-blue" target="_blank">Discover Le Wagon</a>
     </div>
