--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
     <div class="card-white">
       <h1>Hello, I'm Anna 😎 </h1>
       <img src="images/IMG_0033-screen (1).jpg" class="img-circle" alt="profile" height="300px">
-      <p>I love Ruby on Rails, web-development and traveling around the World 🌍.</p>
-      <p>At the moment I participate at the fullstack
+      <p>I love Ruby on Rails, web-development and traveling around the World 🌍. At the moment I participate at the fullstack
         web-development bootcamp of Le Wagon.</p>
-      <a href="https://www.lewagon.com" class="btn-blue" target="_blank">Discover Le Wagon</a>
+      <a href="https://github.com/AnnaMoe" class="btn-blue" target="_blank">Explore my Projects</a>
     </div>
    
     <div class="card-white">
       <h2>Follow me</h2>
     
       <ul class="list-inline">
-        <li><a href="#" class="social-icon"><i class="fab fa-github"></i></a></li>
-        <li><a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a></li>
-        <li><a href="#" class="social-icon"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://github.com/AnnaMoe" class="social-icon" target="_blank"><i class="fab fa-github"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/anna-lena-m%C3%B6lling-450703187/" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://www.instagram.com/anna.moelling/?hl=de" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a></li>
       </ul>
     </div>
   </div>
